reverse thin column in CSS Grid to prevent text overspill using grid-template-columns, style: adjust text layout for better UX design and readability

--- a/css/daily.css
+++ b/css/daily.css
@@ -1,8 +1,13 @@
 /* DAILY*/
 
-
 #daily {
   padding: 200px 100px;
+}
+
+.dailycontainer {
+  /* 1140px */
+  max-width: 120rem;
+  margin-left: -3rem;
 
 }
 
@@ -12,6 +17,17 @@
   font-weight: 800;
   color: #c2c0c0;
   margin-top: 10px;
+  text-transform: uppercase;
+
+}
+
+.exercisetips-reverse {
+  font-size: 34px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 800;
+  color: #c2c0c0;
+  margin-top: 10px;
+  margin-left: -3rem;
   text-transform: uppercase;
 }
 
@@ -25,13 +41,24 @@
   grid-column: 1;
 }
 
+.grid-container-reverse {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  /* The first column is thinner (1/3) and the second is wider (2/3) */
+}
+
+.thin-column-reverse {
+  grid-column: 1;
+}
+
 .daily-subheader {
   font-family: "Montserrat", sans-serif;
-  font-size: 25px;
+  font-size: 30px;
   font-weight: 550;
   line-height: 1.2;
   margin-bottom: 30px;
   margin-top: 12rem;
+  margin-left: 12rem;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
@@ -43,6 +70,7 @@
   letter-spacing: -0.5px;
   margin-bottom: 40px;
   padding: 40px;
+  margin-left: -5rem;
 }
 
 .daily-img {
@@ -55,3 +83,14 @@
   width: 70%;
   border-radius: 10px;
 }
+
+.daily02-img-box {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.daily02-img {
+  width: 60%;
+  border-radius: 8px;
