--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ body {
 }
 
 .landingpg-img {
+  border-radius: 10px;
   width: 100%;
 }
 
@@ -87,6 +88,7 @@ body {
 .logo {
   height: 129px;
 }
+
 .button {
   display: inline-block;
   text-decoration: none;
@@ -118,21 +120,25 @@ body {
 .btnmargin-right {
   margin-right: 1.6rem !important;
 }
+
 .container {
   /* 1140px */
   max-width: 120rem;
   padding: 0 3.2rem;
   margin: 0 auto;
 }
+
 .grid {
   display: grid;
   column-gap: 30px;
   row-gap: 9.6rem;
 }
+
 .cssgrid2cols {
   grid-template-columns: repeat(2, 1fr);
-} 
-#about-section{
+}
+
+#about-section {
 
   margin-bottom: 15rem;
   margin: 30px auto;
@@ -141,20 +147,19 @@ body {
   padding: 80px;
   border-radius: 10px;
 }
+
 .about-img-box {
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-} 
+}
+
 .about-img {
   width: 90%;
   border-radius: 8px;
 }
-.landingpg-img{
-border-radius:10px;
-width:100%;
-}
+
 .subheader {
   font-family: "Montserrat", sans-serif;
   font-size: 25px;
@@ -164,6 +169,7 @@ width:100%;
   text-transform: uppercase;
   letter-spacing: 1px;
 }
+
 .main-description {
   font-size: 18px;
   line-height: 1.8;
